# explore-sf-data

./: .gitignore  README.md  datasets.yaml  pyproject.toml
data/processed/: analysis_neighborhoods.geojson  census_tracts.geojson  city_boundary.geojson  park_scores_by_district.json  park_scores_points.json  supervisor_districts.geojson
data/reference/: supervisors.csv
notebooks/: 01-boundaries.ipynb  02-park-scores.ipynb
scripts/: fetch_boundaries.py  process_meters.py  process_park_scores.py
site/: index.html  meters.html  parks.html
src/sfdata/: __init__.py  fetch.py  geo.py
