[project]
name = "explore-sf-data"
version = "0.1.0"
description = "Exploring San Francisco open data (DataSF): transit, arts, housing, effective government"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "duckdb>=1.5.4",
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "jupyterlab>=4.6.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfdata"]
